tests/paczka1/fuzzy1/77110655.err
Error in line 3: CuKQF A45 3,8
Error in line 28: A991 A991 66,5
